# Minecraft-Clone

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
include/Audio/: SoundManager.h
include/Core/: Application.h  Camera.h  Event.h  EventDispatcher.h  Input.h  Time.h
include/Networking/: NetworkManager.h  NetworkMessages.h  YojimboMessageFactory.h
include/Physics/: CharacterController.h  PhysicsManager.h
include/Rendering/: BlockTextureRegistry.h  ChunkMesh.h  Frustum.h  RemotePlayerRenderer.h  Shader.h  TestCube.h  Texture.h
include/World/: Block.h  BlockInteraction.h  BlockType.h  Chunk.h  ChunkManager.h  ChunkMeshGenerator.h  ChunkRenderer.h  Raycast.h  TerrainGenerator.h  World.h
scripts/: generate_atlas.py
src/: main.cpp
src/Audio/: SoundManager.cpp
src/Core/: Application.cpp  Camera.cpp  Input.cpp  Time.cpp
src/Networking/: NetworkManager.cpp  NetworkMessages.cpp
src/Physics/: CharacterController.cpp  PhysicsManager.cpp
src/Rendering/: BlockTextureRegistry.cpp  ChunkMesh.cpp  Frustum.cpp  RemotePlayerRenderer.cpp  Shader.cpp  TestCube.cpp  Texture.cpp
src/World/: Block.cpp  BlockInteraction.cpp  BlockType.cpp  Chunk.cpp  ChunkManager.cpp  ChunkMeshGenerator.cpp  ChunkRenderer.cpp  Raycast.cpp  TerrainGenerator.cpp  World.cpp
